add scenarios handlers
